--- a/components/BackgroundVideo.module.css
+++ b/components/BackgroundVideo.module.css
@@ -16,16 +16,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center top;
-}
-
-@media (max-width: 767px) {
-  .video {
-    object-position: 45% center;
-    height: 100%;
-    width: auto;
-    min-width: 100%;
-  }
+  /* Centro visual con ligera tendencia hacia arriba para ver contenido importante */
+  object-position: center 40%;
 }
 
 .overlay {
@@ -45,7 +37,7 @@
   width: 100%;
   height: 100%;
   background-image: url('/videos/law-office-mobile.jpg');
-  background-position: center top;
+  background-position: center 40%;
   background-repeat: no-repeat;
   background-size: cover;
 } 
