fix: Actualizado componente de video para usar archivos existentes

--- a/components/BackgroundVideo.module.css
+++ b/components/BackgroundVideo.module.css
@@ -36,7 +36,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/videos/law-office-mobile.jpg');
+  background-color: #2d3436;
   background-position: center 40%;
   background-repeat: no-repeat;
   background-size: cover;
