--- a/components/BackgroundVideo.module.css
+++ b/components/BackgroundVideo.module.css
@@ -1,16 +1,18 @@
 .videoContainer {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: -1;
+  z-index: 0;
   background-color: #2d3436;
 }
 
 .video {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -23,9 +25,6 @@
   .video {
     /* En móviles centramos el video y lo ampliamos para cubrir bien */
     object-position: 60% top;
-    width: 120%; /* Hacemos el video más ancho que el contenedor */
-    max-width: none;
-    left: -10%; /* Compensamos para centrar */
   }
 }
 
@@ -46,7 +45,4 @@
   width: 100%;
   height: 100%;
   background-color: #2d3436;
-  background-position: center 40%;
-  background-repeat: no-repeat;
-  background-size: cover;
 } 
