--- a/components/BackgroundVideo.module.css
+++ b/components/BackgroundVideo.module.css
@@ -114,4 +114,29 @@
   align-items: center;
   justify-content: center;
   background-color: #2d3436;
+}
+
+.hero {
+  min-height: 100vh;
+  position: relative;
+}
+
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.capa {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #1c1c1d;
+  opacity: 0.5;
+  mix-blend-mode: overlay;
 } 
