--- a/components/VideoBackground.module.css
+++ b/components/VideoBackground.module.css
@@ -41,12 +41,14 @@
 /* Media queries para dispositivos móviles */
 @media (max-width: 768px) {
   .videoContainer {
-    position: absolute;
+    position: relative;
     height: 100vh;
   }
   
   .video {
     object-position: center;
+    width: 100%;
+    height: 100%;
   }
 }
 
